# Resume

./: .gitignore  Makefile  README.md  base.html  build.py  convert.js  data.tex  data.toml  definitions.py  maker.py  package.json  pnpm-lock.yaml  pyproject.toml  readme.txt  render.py  requirements.txt  resume-toml.md  resume.html  resume.json  resume.odt  resume.rst  resume.tex  resume.toml  resume2.md  resume_2col.tex  run.py  text-resume.tex  tsconfig.json
_build/: fonts  foo.tex  resume.tex
assets/: base.html  style.css  styles.css
css/: styles.css  web.css
data/: resume.json  resume.xml  schema.xsd
html/: Makefile  base.html  build_html.py  convert.js  input.html  output_pdf.html  package.json  pdf.css  pnpm-lock.yaml  resume.html  resume_plaintext.txt  resume_template.html  run.sh  style.css
html/css/: pdf.css
latex/: resume.tex
output/: output.html  resume.html
output/_build/: fonts
scripts/: __init__.py  render.py
src/: ai.ts  cli.ts  convert.ts  index.ts
templates/: template.html  template.tex
xml/: foo.tex  resume.xml  schema.xsd  style.css  template.html  template.tex  xml2render.py
