[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Keaton Guderian <keagud@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xmlschema = "^2.5.0"
xsdata = { version = "^23.8", extras = ["cli"]}
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
isort = "^5.12.0"
pyright = "^1.1.330.post0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
